# internal/delivery/http/handlers/comment_handler.go
@@ -46,7 +46,7 @@ func (ch *CommentHandler) CreateComment(c *gin.Context) {
 // @Tags Comments
 // @Produce json
 // @Param id path string true "ID комментария"
-// @Success 200 {object} entities.CommentResponse
+// @Success 200 {object} responses.CommentResponse
 // @Failure 404 {object} map[string]string
 // @Router /api/v1/comments/{id} [get]
 func (ch *CommentHandler) GetCommentsByTokenId(c *gin.Context) {
